tests/ValidPrograms/Test9/test9.c
int a,b[8];

int main(){
	a=3;
	b[0]=2;
	return a<<b[1-1];
}
