tests/SyntaxError/Test13/test13.c
int main(){
int b = 5;
int a = 2*b.b;
return a;

}
